welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
    var couleur:Boolean = blanc
    
couleur = getCouleurSol()

    if(estFaceMur){
    	return
    }
    return couleur
    
}        
